--- a/src/components/VestContractsTable/VestContractsTable.module.css
+++ b/src/components/VestContractsTable/VestContractsTable.module.css
@@ -14,6 +14,9 @@
   border: 1px solid #585f63;
   padding: 8px;
 }
+.view div button:hover {
+  color: #000;
+}
 .view div h6 {
   margin:0;
   padding:0;
