--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,21 @@
   justify-content: center;
 }
 .App > div {
-  min-width: 80vw;
+  min-width: 600px;
   max-width: 80vw;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .App > div {
+    min-width: 200px!important;
+    max-width: 80vw;
+  }
 }
 
 @media only screen and (max-width: 480px) {
   .App > div {
-    min-width: 200px!important;
+    min-width: 300px!important;
     max-width: 80vw;
   }
 }
