--- a/src/components/Drawer/Drawer.module.css
+++ b/src/components/Drawer/Drawer.module.css
@@ -26,21 +26,36 @@
 
 .navigation a {
   background: none;
-  padding: 4px;
+  padding: 8px;
   border: none;
   font-family: Manrope-semibold;
   border-radius: 8px;
   font-weight: 600;
 
+  text-decoration: none;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 4px;
+  gap: 8px;
+}
+.navigation a:visited {
+  color: #000;
+}
+.navigation svg {
+  font-size: 1.5rem;
+
 }
 .navigation a:hover {
-  background: #d3d3d3;
+  background: #f2f2f2;
   cursor: pointer;
 }
 .navigation a:hover svg {
   stroke:black;
 }
+
+.navigation a.active {
+  background-color: #f2f2f2;
+  stroke: black;
+  font-weight: 800;
+}
+
