--- a/src/components/VestCalculateSchedules/VestCalculateSchedules.module.css
+++ b/src/components/VestCalculateSchedules/VestCalculateSchedules.module.css
@@ -1,8 +1,3 @@
-.form label {
-  text-align: left;
-  margin-bottom: 0;
-  font-family: Manrope-semibold;
-}
 
 .schedule {
   padding:0;
@@ -11,7 +6,9 @@
   padding:0;
   font-family: Manrope-bold;
   font-size: 1.1rem;
+  margin:0;
 }
+
 
 .schedule * {
   color: #16181c;
@@ -19,10 +16,9 @@
 
 .schedule p {
   opacity: 0.8;
-
   font-variant-numeric: tabular-nums;
 }
 
-.calculate {
-  padding: 0 16px;
+.schedule .list-title {
+  display: none;
 }
