--- a/src/components/Drawer/Drawer.module.css
+++ b/src/components/Drawer/Drawer.module.css
@@ -31,6 +31,7 @@
   font-family: Manrope-semibold;
   border-radius: 8px;
   font-weight: 600;
+  color: #000;
 
   text-decoration: none;
   display: flex;
