--- a/src/components/Root/Root.module.css
+++ b/src/components/Root/Root.module.css
@@ -6,3 +6,45 @@
   padding: 16px;
 }
 
+.root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  padding: 16px;
+}
+
+.root img {
+  width: 128px;
+  height: auto;
+}
+
+.root div {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 16px;
+  align-items: center;
+  text-align: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.root div h5 {
+  margin:0;
+  font-family: Manrope-semibold;
+  font-size: 1.2rem;
+  padding: 0;
+  font-weight: 800;
+  color: #16181c;
+}
+.root div button {
+  border: none;
+  padding: 16px;
+  min-width: 128px;
+  border-radius: 4px;
+  font-size: 1rem;
+  color: #fff;
+  background-color: #16181c;
+}
