--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -9,7 +9,14 @@
 
   display: grid;
   grid-template-columns: 1fr 3fr;
-  
+}
+
+@media screen and (max-width: 500px) {
+  .app-wrapper {
+    grid-template-columns: 4fr;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
 }
 
 .app-wrapper p {
