--- a/src/components/Root/Root.module.css
+++ b/src/components/Root/Root.module.css
@@ -6,6 +6,13 @@
   padding: 16px;
 }
 
+@media screen and (max-width: 500px) {
+  .root-layout {
+    padding: 0;
+  }
+}
+
+
 .root {
   display: flex;
   align-items: center;
