--- a/src/components/Create/Create.module.css
+++ b/src/components/Create/Create.module.css
@@ -21,3 +21,19 @@
   font-size: 0.5rem!important;
   color: red!important;
 }
+
+.toolbar {
+  justify-content: space-between;
+  align-items: center;
+  padding:0 !important;
+}
+.toolbar img {
+  width: 24px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+@media screen and (min-width: 501px) {
+  .toolbar img {
+    display: none;
+  }
+}
