--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -32,3 +32,19 @@
   flex: 1;
   min-width: 0;
 }
+
+.toolbar {
+  justify-content: space-between;
+  align-items: center;
+  padding:0 !important;
+}
+.toolbar img {
+  width: 24px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+@media screen and (min-width: 501px) {
+  .toolbar img {
+    display: none;
+  }
+}
