--- a/src/components/Track/Track.module.css
+++ b/src/components/Track/Track.module.css
@@ -19,7 +19,8 @@
 }
 
 .toolbar {
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
   padding:0 !important;
 }
 .toolbar img {
@@ -37,4 +38,15 @@
 .toolbar div * p {
   font-size: 0.565rem;
   margin:0;
+}
+
+.home img {
+  width: 24px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+@media screen and (min-width: 501px) {
+  .home img {
+    display: none;
+  }
 }
