--- a/src/components/NotFound/NotFound.module.css
+++ b/src/components/NotFound/NotFound.module.css
@@ -18,3 +18,18 @@
   padding-bottom: 8px;
 }
 
+.toolbar {
+  justify-content: space-between;
+  align-items: center;
+  padding:0 !important;
+}
+.toolbar img {
+  width: 24px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+@media screen and (min-width: 501px) {
+  .toolbar img {
+    display: none;
+  }
+}
