--- a/src/components/Root/Root.module.css
+++ b/src/components/Root/Root.module.css
@@ -40,10 +40,12 @@
 
 .root div h5 {
   margin:0;
-  font-family: Manrope-semibold;
+  font-family: Manrope-regular;
   font-size: 1.2rem;
   padding: 0;
-  font-weight: 800;
+  font-weight: 600;
+  border-bottom: 1px solid #16181c;
+  padding-bottom: 16px;
   color: #16181c;
 }
 .root div button {
@@ -53,5 +55,12 @@
   border-radius: 4px;
   font-size: 1rem;
   color: #fff;
+  background-color: #fff;
+  color: #16181c;
+  border: 1px solid #16181c;
+}
+.root div button:hover {
+  color: #fff;
+  cursor: pointer;
   background-color: #16181c;
 }
