--- a/src/components/Root/Root.module.css
+++ b/src/components/Root/Root.module.css
@@ -48,6 +48,21 @@
   padding-bottom: 16px;
   color: #16181c;
 }
+.root div ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  text-align: left;
+  margin: 0px 16px;
+}
+.root div ul li ol {
+  margin: 0;
+  padding-left: 16px;
+}
+
 .root div button {
   border: none;
   padding: 16px;
