--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -1,24 +1,36 @@
 .app-wrapper {
-  width: 100%;
-  max-width: 60vw;
-  max-width: 780px;
-  height: 100%;
-  background-color: #fff;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
+  height: 100vh;
 
+  border: 1px solid #d3d3d3;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-rows: auto 1fr;
+  grid-template-areas:
+          'drawer main'
+}
+.app-wrapper nav {
+  grid-area: drawer;
+}
+.app-wrapper main {
+  grid-area: main;
+  background-color: #fff;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: overlay;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr minmax(0, 560px) 1fr;
+}
+.app-wrapper main > section {
+  grid-area: 1 / 2 / 1 / 3;
 }
 
-@media screen and (max-width: 500px) {
+.app-wrapper main > section.full {
+  grid-area: 1 / 1 / 1 / 4
+}
+
+@media only screen and (max-width: 500px) {
   .app-wrapper {
-    grid-template-columns: 4fr;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
+    grid-template-areas: 'main';
+    grid-template-rows: auto;
   }
-}
-
-.app-wrapper p {
-  color: #000; 
 }
