--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -3,6 +3,7 @@
 
   border: 1px solid #d3d3d3;
   display: grid;
+  grid-template-columns: 1fr;
   grid-template-rows: auto 1fr;
   grid-template-areas:
           'drawer main'
