--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,6 @@
-
-@font-face {
-  font-family: Manrope-regular;
-  src: url('./assets/fonts/manrope/Manrope-Medium.ttf');
-}
-@font-face {
-  font-family: Manrope-bold;
-  src: url('./assets/fonts/manrope/Manrope-Bold.ttf');
-}
-@font-face {
-  font-family: Manrope-light;
-  src: url('./assets/fonts/manrope/Manrope-Light.ttf');
-}
-@font-face {
-  font-family: Manrope-semibold;
-  src: url('./assets/fonts/manrope/Manrope-SemiBold.ttf');
-}
-
 body {
   margin: 0;
-  font-family: Manrope-regular, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Manrope-medium', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
