--- a/src/pages/dashboard/Dashboard.module.css
+++ b/src/pages/dashboard/Dashboard.module.css
@@ -11,12 +11,14 @@
 
 }
 
+
 .grid main > section {
   grid-area: 1 / 2 / 1 / 3;
   display: flex;
   gap: 24px;
   flex-direction: column;
   padding-bottom: 5vh;
+  padding: 0 16px;
 
   background-color: #F4F4F5;
   height: 100vh;
@@ -67,22 +69,29 @@
 .grid > footer {
   grid-area: footer;
   background-color: #08090B;
+  
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr minmax(0, 560px) 1fr;
+}
+.grid footer > section {
+  grid-area: 1 / 2 / 1 / 3;
+}
+.grid footer > section > nav {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  height: 100%;
+}
+.grid > footer > section > nav a {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.grid > footer nav {
-  display: flex;
-  gap: 50px;
-}
-.grid > footer nav a {
-  display: flex;
-  align-items: center;
   flex-direction: column;
   gap: 4px;
   text-decoration: none;
 }
-.grid > footer nav a p {
+.grid > footer > section > nav a p {
   color: #E9E9EB;
   font-weight: 500;
   letter-spacing: 0.05em;
@@ -93,26 +102,40 @@
 }
 
 .isActive p {
-  color: #FFCD1E;
+  color: #FFCD1E!important;
 }
 .isActive svg path {
   fill: #FFCD1E;
 }
 
-
-@media only screen and (max-width: 700) {
-  .grid {
-    display: grid;
+@media screen and (min-width: 700px) {
   
-    grid-template-columns: auto 1fr auto;
+  
+  .grid {  
+    grid-template-rows: 56px 48px 1fr;
+    
     grid-template-areas: 
               'header'
               'subheader'
               'main';
-    grid-template-rows: 1fr;
   }
 
-  .grid > footer {
-    grid-area: 'subheader';
+  .grid > footer > section nav a {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 4px;
+    text-decoration: none;
   }
+
+  .grid > footer > section > nav a svg {
+    width: 24px;
+    height: 24px;
+  }
+  
+
+  .grid > footer {
+    grid-area: subheader;
+  }
+  
 }
