--- a/src/pages/dashboard/Dashboard.module.css
+++ b/src/pages/dashboard/Dashboard.module.css
@@ -14,14 +14,11 @@
 
 .grid main > section {
   grid-area: 1 / 2 / 1 / 3;
-  display: flex;
-  gap: 24px;
-  flex-direction: column;
-  padding-bottom: 5vh;
+  
   padding: 0 16px;
-
+  padding-top: 24px;
+  padding-bottom: 24px;
   background-color: #F4F4F5;
-  height: 100vh;
 }
 
 .grid main > section.full {
@@ -32,7 +29,6 @@
   grid-area: main;
   background-color: #E9E9EB;
 
-  height: 100%;
   overflow-x: hidden;
   overflow-y: overlay;
   display: grid;
@@ -99,6 +95,11 @@
   font-size: 0.875rem;
   padding: 0;
   margin: 0;
+}
+
+.grid > footer > section > nav a svg {
+  width: 32px;
+  height: 32px;
 }
 
 .isActive p {
