--- a/src/pages/info/Info.module.css
+++ b/src/pages/info/Info.module.css
@@ -1,7 +1,7 @@
 .grid {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 48px;
 }
 .grid * {
   letter-spacing: 0.05em;
@@ -12,8 +12,49 @@
 .grid h6 {
   color: #08090B;
   font-size: 1.25rem;
+  text-align: center;
+  font-weight: 600;
 }
 .grid p {
   color: #08090B;
   font-size: 1rem;
+  text-align: center;
+}
+
+.helper__wrapper {
+  background-color: #FFFFFF;
+  padding: 16px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.helper__wrapper h6 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+
+.helper__wrapper p {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.05em;
+  text-align: center;  
+}
+
+.helper__wrapper button {
+  background-color: #FFCD1E;
+  border-radius: 4px;
+  padding: 12px;
+  font-family: Manrope;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 1.5;
+  letter-spacing: 0.05em;
+  text-align: center;
+  border: none;
 }
