--- a/src/pages/splash/Splash.module.css
+++ b/src/pages/splash/Splash.module.css
@@ -16,6 +16,10 @@
   flex-direction: column;
   justify-content: space-between;
 }
+.brand img {
+  width: 110px;
+  height: 110px;
+}
 .brand {
   display: flex;
   flex-direction: column;
@@ -63,7 +67,7 @@
   height: 110px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
   
   .layout > div:nth-child(1) img {
     width: 160px;
