--- a/src/components/cliffPeriod/Cliff.module.css
+++ b/src/components/cliffPeriod/Cliff.module.css
@@ -66,16 +66,18 @@
   display: grid;
   grid-template-rows: auto 1fr;
   grid-template-columns: 1fr;
-  row-gap: 24px;
-  height: 50vh;
+  gap: 24px;
+  height: 85vh;
 }
 .dd ul {
   display: grid;
-  grid-template-rows: repeat(7, max-content);
+  grid-template-rows: repeat(12, max-content);
   grid-template-columns: 1fr;
   gap: 8px;
   padding: 0px 16px 8px 0px;
   overflow-y: scroll;
+
+  padding-bottom: 24px;
 }
 .dd ul li {
   padding: 16px!important;
