--- a/src/components/cliffPeriod/Cliff.module.css
+++ b/src/components/cliffPeriod/Cliff.module.css
@@ -6,7 +6,8 @@
 
   border-radius: 4px;
 
-  padding: 12px 16px 12px 16px;
+  padding-left: 16px;
+  padding-right: 16px;
   overflow: hidden;
   background-color: #FFFFFF;
 }
