--- a/src/components/addressSelect/Address.module.css
+++ b/src/components/addressSelect/Address.module.css
@@ -53,8 +53,8 @@ input[type="radio"] {
 }
 input[type="radio"]::before {
   content: "";
-  width: 0.65em;
-  height: 0.65em;
+  width: 0.55em;
+  height: 0.55em;
   border-radius: 50%;
   transform: scale(0);
   transition: 120ms transform ease-in-out;
@@ -68,7 +68,7 @@ input[type="radio"]::before {
   /* ...existing styles */
 
   /* Windows High Contrast Mode */
-  background-color: CanvasText;
+  background-color: #08090B;
 }
 
 input[type="radio"]:focus {
