--- a/src/pages/splash/Splash.module.css
+++ b/src/pages/splash/Splash.module.css
@@ -75,3 +75,19 @@
   }
 
 }
+
+.backdropEnter {
+  opacity: 0;
+}
+.backdropEnterActive {
+  opacity: 1;
+  transition: opacity 200ms;
+}
+
+.backdropExit {
+  opacity: 1;
+}
+.backdropExitActive {
+  opacity: 0;
+  transition: opacity 200ms;
+}
