--- a/src/pages/info/Info.module.css
+++ b/src/pages/info/Info.module.css
@@ -56,6 +56,7 @@
   letter-spacing: 0.05em;
   text-align: center;
   border: none;
+  color: #08090B;
 }
 .helper__wrapper button:hover {
   background-color: #FFE792;
