--- a/src/components/cliffPeriod/Cliff.module.css
+++ b/src/components/cliffPeriod/Cliff.module.css
@@ -6,8 +6,7 @@
 
   border-radius: 4px;
 
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 8px 16px;
   overflow: hidden;
   background-color: #FFFFFF;
 }
