--- a/src/components/cliffPeriod/Cliff.module.css
+++ b/src/components/cliffPeriod/Cliff.module.css
@@ -17,7 +17,11 @@
 
 .active {
   transform: rotate(180deg);
-  transition: transform 0.1s ease-in;
+  transition: transform 0.2s ease-in;
+}
+.passive {
+  transform: rotate(0deg);
+  transition: transform 0.2s ease-in;
 }
 
 .select div {
