--- a/src/components/cliffPeriod/Cliff.module.css
+++ b/src/components/cliffPeriod/Cliff.module.css
@@ -6,7 +6,7 @@
 
   border-radius: 4px;
 
-  padding: 8px 16px;
+  padding: 10px 16px;
   overflow: hidden;
   background-color: #FFFFFF;
 }
@@ -62,6 +62,8 @@
   right: 0;
 
   border-radius: 4px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
   padding: 24px;
 
   display: grid;
@@ -157,5 +159,7 @@
     padding: 24px 32px 24px 32px;
     overflow: hidden;
     max-height: 560px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
   }
 }
