--- a/src/components/gracePeriod/Grace.module.css
+++ b/src/components/gracePeriod/Grace.module.css
@@ -6,7 +6,7 @@
 
   border-radius: 4px;
 
-  padding: 8px 16px;
+  padding: 10px 16px;
 
   overflow: hidden;
   background-color: #FFFFFF;
@@ -61,21 +61,33 @@
   right: 0;
 
   border-radius: 4px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
   padding: 24px;
 
   display: grid;
   grid-template-rows: auto 1fr;
   grid-template-columns: 1fr;
   row-gap: 24px;
-  height: 50vh;
+
+  overflow-y: inital;
 }
 .dd ul {
   display: grid;
   grid-template-rows: repeat(7, max-content);
   grid-template-columns: 1fr;
   gap: 8px;
-  padding: 0px 16px 0px 0px;
+
+
+  height: fit-content;
   overflow-y: auto;
+}
+@media screen and (max-height: 590px) {
+  .dd ul {
+  
+    height: 50vh;
+    
+  } 
 }
 .dd ul:has(::-webkit-scrollbar) {
   padding-right: 16px;
@@ -158,5 +170,7 @@
     padding: 24px 32px 24px 32px;
     overflow: hidden;
     max-height: 560px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
   }
 }
