--- a/src/components/walletSelect/WalletSelect.module.css
+++ b/src/components/walletSelect/WalletSelect.module.css
@@ -72,13 +72,15 @@
   right: 0;
 
   border-radius: 4px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
   padding: 24px;
 
   display: grid;
   grid-template-rows: auto auto 1fr;
   grid-template-columns: 1fr;
   gap: 24px;
-  height: 85vh;
+  height: max-content;
 }
 .dd ul {
   margin:0;
@@ -257,11 +259,10 @@
     align-self: center;
 
     padding: 24px 32px 0px 32px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
     max-height: 525px;
     overflow: hidden;
   }
-  .dd ul {
-    overflow-y: scroll;
-    padding-right: 16px;
-  }
+  
 }
