--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&family=Roboto+Mono:wght@400&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Manrope', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
 
-  font-family: "Manrope"!important;
 }
 
 code {
@@ -38,7 +37,6 @@ p {
   scrollbar-width: none;
 }
 
-
-button {
-  font-family: "Manrope";
+* {
+  font-family: 'Manrope';
 }
