Fix alignments + build latest

--- a/src/pages/creator/Creator.module.css
+++ b/src/pages/creator/Creator.module.css
@@ -4,6 +4,7 @@
   grid-template-rows: auto 1fr;
   height: 100%;
   gap: 24px;
+  width: 100%;
 }
 .grid > section:first-of-type {
   display: flex;
