--- a/src/index.css
+++ b/src/index.css
@@ -1,46 +1,378 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&family=Roboto+Mono:wght@400&display=swap');
 
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --background-color: #08090B; 
+  --globalnav-background: rgba(22, 22, 23, .2);
+  --inset: rgba(255,255,255,0.2);
+  --globalnav-backdrop-filter: saturate(180%) blur(10px);
+  --globalnav-backdrop-filter-level-two: saturate(180%) blur(20px);
+
+  --status-red: #FF627E;
+  --status-green: #00CBB6;
+  --status-green-5: #E1FFF1;
+  --core-grey: #91919D;
+  --core-grey-5: #F9F9FA;
+  --core-grey-20: #E9E9EB;
+  --core-grey-80: #A7A7B0;
+  --core-grey-100: #D9D9D9;
+  --core-grey-150: #D3D3D8;
+  --core-black-100: #08090B;
+  --core-black-150: #363A3F;
+  --core-black-contrast: #17191C;
+  --core-black-contrast-2: #282B2E;
+  --core-black-contrast-3: #464C4F;
+
+  --vestr-color: #FFCD1E;
+}
+
+.bg-vestr {
+  background-color: var(--vestr-color);
+}
+
+.green-good {
+  color: var(--status-green);
+}
+.bg-green-good {
+  background-color: var(--status-green-5);
+}
+.red-bad {
+  color: var(--status-red);
+}
+
+.bg-bad {
+  background: var(--status-red);
+}
+
+.text-black-2 {
+  color: var(--core-black-150);
+}
+
+.bg-black {
+  background-color: var(--core-black-100);
+}
+.text-black {
+  color: #08090B;
+}
+.text-white {
+  color: var(--core-grey-5);
+}
+
+
+.color-core-grey {
+  color: var(--core-grey);
+}
+.color-black {
+  color: var(--core-black-100);
+}
+
+.text-disabled {
+  color: var(--core-black-contrast-3);
+}
+
+.text-error {
+  color: var(--status-red);
+}
+
+.form-error-message {
+  color: var(--status-red);
+  font-weight: 600;
+}
+
+.form-success-message {
+  color: var(--status-green);
+  font-weight: 600;
+}
+.form-error-border {
+  border: 1px solid var(--status-red)!important;
+  border-radius: 4px;
+}
+
+.make-svg-inline svg {
+  display: inline;
+}
+
+.input-outline {
+  outline: 1px solid #464C4F;
+}
+.input-no-outline {
+  outline: none;
+}
+
+
+.password-label {
+  color: var(--core-grey-80);
+}
+
+.understand-label {
+  color: var(--core-grey-5);
+}
+
+.core-grey-5 {
+  background-color: var(--core-grey-5);
+}
+
+.core-grey-100 {
+  background-color: var(--core-grey-100);
+}
+
+.core-grey-20 {
+  background-color: var(--core-grey-20);
+}
+
+.text-core-grey-80 {
+  color: var(--core-grey-80);
+}
+.text-core-grey-5 {
+  color: var(--core-grey-5);
+}
+
+.border-white {
+  border: 1px solid var(--core-grey-5);
+  border-radius: 4px;
+}
+
+.core-black-contrast-2 {
+  background-color: var(--core-black-contrast-2);
+}
+.core-black-contrast {
+  background-color: var(--core-black-contrast);
+}
+.core-grey-contrast-3 {
+  color:  var(--core-black-contrast-3);
+}
+
+
 body {
   margin: 0;
+  color: #E9E9EB;
+  height: 100%; 
+  min-height: -webkit-fill-available;
+  font-weight: 500;
+  letter-spacing: 0.3px;
   font-family: 'Manrope', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--background-color);
+  background-size: cover;
+  background-repeat: no-repeat;
   overflow: hidden;
-
+  -webkit-tap-highlight-color: transparent;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+:root { 
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #08090B;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
 }
-h6 {
-  margin: 0;
-  padding: 0;
-}
-p {
-  margin: 0;
-  padding: 0;
+a:hover {
+  color: #535bf2;
 }
 
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 12px 16px;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #282B2E;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    /* background-color: #f9f9f9; */
+  }
+}
+
+
+.title-bar {
+  width: 100%;
+  background: var(--core-black-100);
+}
+
+body.theme-light .title-bar {
+  text-shadow: none;
+  background: none;
+  box-shadow: inset 0 0 2px rgba(255,255,255,1);
+  border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+
+input:-internal-autofill-selected {
+  background-color: #08090B!important;
+}
+input:-webkit-autofill,
+  input:-webkit-autofill:focus {
+    transition: background-color 600000s 0s, color 600000s 0s;
+  }
+
+  input[type="checkbox"] {
+    /* Add if not using autoprefixer */
+    -webkit-appearance: none;
+    appearance: none;
+    /* For iOS < 15 to remove gradient background */
+    background-color: var(--core-black-contrast-3);
+    /* Not removed via appearance */
+    margin: 0;
+    font: inherit;
+    color: #BDBDC4;
+    width: 20px;
+    height: 20px;
+    border: 2px solid  var(--core-black-contrast-3);
+    border-radius: 12px;
+    transform: translateY(-0.01em);
+  }
+  input[type="checkbox"]:disabled {
+    background-color: #E9E9EB;
+  }
+  input[type="checkbox"] {
+    /* ...existing styles */
+  
+    display: grid;
+    place-content: center;
+  }
+  input[type="checkbox"]::before {
+    content: url(./assets//check_small.svg);
+    width: inherit;
+    height: inherit;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: 120ms transform ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4px 6px;
+    /* box-shadow: inset 1em 1em #282B2E; */
+  }
+  input[type="checkbox"]:checked::before {
+    transform: scale(1);
+  }
+  
+  input[type="checkbox"]::before {
+    /* ...existing styles */
+  
+    /* Windows High Contrast Mode */
+    background-color: #F9F9FA;
+  }
+  
+  input[type="checkbox"]:focus {
+    outline: max(2px, 0.15em) solid #F9F9FA;
+    outline-offset: max(2px, 0.15em);
+  }
+
+  button:hover {
+    outline: none!important;
+    border-color: transparent!important;
+  }
+
+  .desktop-only {
+    display: none;
+  }
+  .mobile-only {
+    display: flex;
+    margin-bottom: 2.375em;
+  }
+
+  @media screen and (min-width: 560px) {
+  
+    .desktop-only {
+      display: flex;
+    }
+    .mobile-only {
+      display: none;
+    }
+    
+  }
+  
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
 *::-webkit-scrollbar {
   display: none;
 }
 
+/* Hide scrollbar for IE, Edge and Firefox */
 * {
   -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;
+  scrollbar-width: none;  /* Firefox */
 }
 
-* {
-  font-family: 'Manrope';
+code {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 0.875rem;
+  color: var(--core-grey-150);
+  font-weight: 400;
 }
 
-.hidden {
+::file-selector-button {
   display: none;
+}
+
+.border-custom {
+  border: 1px solid #282B2E;
+}
+.border-custom-2 {
+  border: 1px solid #464C4F;
+}
+
+
+.arrow-active {
+  transform: rotate(180deg);
+  transition: transform 0.2s ease-in;
+}
+.arrow-passive {
+  transform: rotate(0deg);
+  transition: transform 0.2s ease-in;
+}
+.accordion-content {
+  overflow: hidden;
+  max-height: 1000px;
+  transition: max-height 1s ease-in-out;
+}
+
+.accordion-content[aria-expanded="true"] {
+  max-height: 0px;
+  transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
 }
