--- a/src/pages/create/Create.module.css
+++ b/src/pages/create/Create.module.css
@@ -13,25 +13,6 @@
   gap: 16px;
 }
 
-.grid > section button {
-  border: none;
-  background: none;
-  text-align: left;
-
-  font-size: 1rem;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.05em;
-  text-align: left;
-  padding: 0;
-  margin:0;
-  color: #08090B;
-}
-.grid > section button:hover {
-  color: #91919D;
-  cursor: pointer;
-}
-
 .changes {
   font-size: 1rem!important;
   font-weight: 500!important;
@@ -108,33 +89,6 @@
   grid-template-columns: 1fr;
   gap: 24px;
 }
-
-.form button[type="button"] {
-  background-color: #FFCD1E;
-  font-size: 1rem;
-  font-weight: 600;
-  line-height: 19px;
-  letter-spacing: 0.05em;
-  color: #08090B;
-  border-radius: 4px;
-  padding: 16px;
-  text-align: center;
-  margin-top: calc(32px - 24px);
-}
-.form button[type="button"]:disabled {
-  cursor: not-allowed;
-  background-color: #D3D3D8;
-  color: #FFFFFF;
-}
-.form button[type="button"]:hover {
-  cursor: pointer;
-  background-color: #FFE792;
-}
-.form button[type="button"]:disabled:hover {
-  cursor: not-allowed;
-  background-color: #D3D3D8;
-}
-
 .formError {
   background-color: #FFE2E9;
   border-radius: 4px;
@@ -145,6 +99,8 @@
   line-height: 28px;
   letter-spacing: 0.02em;
   color: #08090B;
+
+  width: 100%;
 }
 
 
