--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,18 @@
   --core-black-contrast-3: #464C4F;
 
   --vestr-color: #FFCD1E;
+
+  font-family: 'Manrope', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;  
+  text-rendering: optimizeLegibility;
+  line-height: 1.5;
+  font-weight: 500;
+
+  font-synthesis: none;
+  -webkit-text-size-adjust: 100%;
 }
 
 .bg-vestr {
@@ -382,3 +394,14 @@ ul {
   margin: 0;
   list-style: none;
 }
+
+  /* Styles for the modal content */
+  .modal-content {
+    position: relative;
+    max-height: 100vh; /* Ensure the modal doesn't exceed 90% of the viewport height */
+    
+    z-index: 2;
+    /* overflow: hidden; */
+    display: flex;
+    flex-direction: column;
+  }
